tests/NormalTests/paczka1/fuzzy1/16447512.err
Error in line 1: zoJYjyY A92 2,4
Error in line 13: zoJYjyY S243 40,9
Error in line 21: i89Y3b A92 55,6
Error in line 25: i89Y3b S187 14,8
Error in line 12: S187 S243 5,9
Error in line 24: zoJYjyY A150 93,5
Error in line 35: O5HhbB2C5rA S187 27,8
Error in line 34: zoJYjyY S187 54,5
